# magnetostatics-vector-potential-3d

./: CMakeLists.txt  Dockerfile  build-and-run.sh
src/: main.cpp
